<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.postlogin.artist.ArtistDetailsFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="64dp">

            <ImageView
                android:id="@+id/artist_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:textSize="54sp"
                android:gravity="start"
                android:layout_marginStart="@dimen/fragment_artist_details_start_margin"
                tools:text="Pitbull"
                app:layout_constraintBottom_toBottomOf="@+id/artist_image"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/light_gray"
                android:text="@string/fragment_artist_details_number_of_followers_label"
                android:layout_marginTop="@dimen/fragment_artist_details_followers_label_top_margin"
                android:layout_marginStart="@dimen/fragment_artist_details_start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/artist_image" />

            <Button
                android:id="@+id/follow_button"
                android:text="@string/fragment_artist_details_follow_button_label"
                style="@style/FollowButtonStyle"
                android:layout_marginTop="@dimen/fragment_artist_details_follow_button_top_margin"
                android:layout_marginStart="@dimen/fragment_artist_details_start_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/followers" />

            <TextView
                android:id="@+id/tracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_artist_details_tracks_top_margin"
                android:layout_marginStart="@dimen/fragment_artist_details_start_margin"
                android:layout_marginEnd="@dimen/fragment_artist_details_start_margin"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="10dp"
                android:textColor="@color/light_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/follow_button"
                tools:text="I Could Be The One (Avicii Vs. Nicky Romero) - Radio Edit • Okay • Easy • We're Still Young • Why Do I Call • I Hope That It Hurts • Nights With You • So Much Love • Lovefool - Nicky Romero Remix • Out Of Control" />

            <TextView
                android:id="@+id/popular_releases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_artist_details_popular_releases_title"
                style="@style/TitleStyle"
                android:layout_marginStart="@dimen/fragment_artist_details_start_margin"
                android:textSize="18sp"
                android:layout_marginTop="@dimen/fragment_artist_details_albums_top_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tracks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/albums"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:itemCount="4"
                android:layout_marginTop="12dp"
                android:layout_marginStart="@dimen/fragment_artist_details_start_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popular_releases_title"
                tools:listitem="@layout/popular_release_item" />

            <Button
                android:id="@+id/see_discography_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prikaži diskografiju"
                style="@style/SecondaryButtonStyle"
                android:minHeight="0dp"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albums"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>